--- a/tercera_entrega/document.tex
+++ b/tercera_entrega/document.tex
@@ -2,6 +2,7 @@
   listof=totoc,
   bibliography=totoc,
   12pt,
+  % parskip=full,
   ]{scrreport}
 \setuptoc{toc}{totoc}
 % \usepackage[a4paper, total={6.5in, 10in}]{geometry}
@@ -12,7 +13,7 @@
 \usepackage[spanish]{babel}
 \usepackage{hyperref}
 \hypersetup{
-  pdftitle={Integración de bibliotecas de análisis y visualización in-situ en una simulación sísmica numérica},
+  pdftitle={Modificación de una simulación sísmica numérica para que haga uso de bibliotecas de análisis y visualización in-situ},
   pdfauthor={Christian Asch},
   colorlinks=true,
   breaklinks=true,
@@ -30,6 +31,8 @@
 
 \pagenumbering{Roman}
 \addchap{Resumen}
+\listoftables
+\listoffigures
 \tableofcontents
 
 \input{introduction}
