--- a/tercera_entrega/titlepage.tex
+++ b/tercera_entrega/titlepage.tex
@@ -1,22 +1,22 @@
 \begin{titlepage}
   \begin{center}
-    UNIVERSIDAD DE COSTA RICA
+    \large\textsc{Universidad de Costa Rica}
 
-    SISTEMA DE ESTUDIOS DE POSGRADO
-
-    \vspace{2.5cm}
-    Integración de bibliotecas de análisis y visualización in-situ en una simulación sísmica numérica.
-
-    \vspace{2.5cm}
-    Propuesta de tesis de maestría sometida a la consideración de la Comisión del Programa de Estudios de Posgrado en Computación e Informática para optar al grado y título de Maestría Académica en ciencias de la computación en informática.
-
-    \vspace{2.5cm}
-    CHRISTIAN ASCH BURGOS
+    \textsc{Sistema de Estudios de Posgrado}
 
     \vspace{4.5cm}
+    \Large{\textsc{Modificación de una simulación sísmica numérica para que haga uso de bibliotecas de análisis y visualización in-situ.}}
+
+    \vspace{3.5cm}
+   \large Propuesta de tesis de maestría sometida a la consideración de la Comisión del Programa de Estudios de Posgrado en Computación e Informática para optar al grado y título de Maestría Académica en Ciencias de la Computación en Informática.
+
+    \vspace{1.5cm}
+    \textsc{Christian Asch Burgos}
+
+    \vspace{1.5cm}
     Ciudad Universitaria Rodrigo Facio, Costa Rica
 
     2024
-
+  \normalsize
   \end{center}
 \end{titlepage}
