Rewriting the ADIOS2 section

--- a/quinta_entrega/framework.tex
+++ b/quinta_entrega/framework.tex
@@ -50,7 +50,8 @@ Se han identificado seis características con las que se caracterizan las biblio
 \end{enumerate}
 \subsection{Bibliotecas de análisis y visualización in-situ}
 \subsubsection{ADIOS2}
-Esta biblioteca le permite al usuario realizar transferencias de datos entre unidades de ejecución de forma transparente, ya sea que es entre dos nodos de una supercomputadora conectadas por algún interconnect o entre computadoras regulares conectadas por red \cite{Godoy2020}.
+  Esta biblioteca \cite{Godoy2020} le permite al usuario realizar transferencias de datos entre unidades de ejecución de forma transparente, ya sea que es entre dos nodos de una supercomputadora conectadas por algúna red de interconexión como Infiniband, entre computadoras regulares conectadas por internet e incluso entre computadoras regulares y una supercomputadora.
+  Está diseñada para abstraer los movimientos 
 \subsubsection{Catalyst}
 Es una herramienta desarrollada por Kitware como un acompañante al software Paraview. Permite instrumentar el código mediante la implementación de un estándar llamado Conduit \cite{Ayachit2021}.
 
