--- a/quinta_entrega/refs.bib
+++ b/quinta_entrega/refs.bib
@@ -435,3 +435,55 @@ series = {SC '17}
   year = {2021},
   pages = {484–494}
 }
+@book{Nielsen2016,
+  title = {Introduction to HPC with MPI for Data Science},
+  ISBN = {9783319219035},
+  ISSN = {2197-1781},
+  url = {http://dx.doi.org/10.1007/978-3-319-21903-5},
+  DOI = {10.1007/978-3-319-21903-5},
+  journal = {Undergraduate Topics in Computer Science},
+  publisher = {Springer International Publishing},
+  author = {Nielsen,  Frank},
+  year = {2016}
+}
+@BOOK{Hennessy2017-ml,
+  title     = "Computer Architecture",
+  author    = "Hennessy, John L and Patterson, David A",
+  publisher = "Morgan Kaufmann",
+  series    = "The Morgan Kaufmann Series in Computer Architecture and Design",
+  edition   =  6,
+  month     =  nov,
+  year      =  2017,
+  address   = "Oxford, England",
+  language  = "en"
+}
+@inproceedings{amdahl1967,
+author = {Amdahl, Gene M.},
+title = {Validity of the single processor approach to achieving large scale computing capabilities},
+year = {1967},
+isbn = {9781450378956},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/1465482.1465560},
+doi = {10.1145/1465482.1465560},
+abstract = {For over a decade prophets have voiced the contention that the organization of a single computer has reached its limits and that truly significant advances can be made only by interconnection of a multiplicity of computers in such a manner as to permit cooperative solution. Variously the proper direction has been pointed out as general purpose computers with a generalized interconnection of memories, or as specialized computers with geometrically related memory interconnections and controlled by one or more instruction streams.},
+booktitle = {Proceedings of the April 18-20, 1967, Spring Joint Computer Conference},
+pages = {483–485},
+numpages = {3},
+location = {Atlantic City, New Jersey},
+series = {AFIPS '67 (Spring)}
+}
+@article{Gustafson1988,
+  title = {Reevaluating Amdahl’s law},
+  volume = {31},
+  ISSN = {1557-7317},
+  url = {http://dx.doi.org/10.1145/42411.42415},
+  DOI = {10.1145/42411.42415},
+  number = {5},
+  journal = {Communications of the ACM},
+  publisher = {Association for Computing Machinery (ACM)},
+  author = {Gustafson,  John L.},
+  year = {1988},
+  month = may,
+  pages = {532–533}
+}
