--- a/quinta_entrega/document.tex
+++ b/quinta_entrega/document.tex
@@ -8,6 +8,7 @@
 % \usepackage[a4paper, total={6.5in, 10in}]{geometry}
 \renewcommand{\baselinestretch}{1.5}
 
+\usepackage{amsmath}
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage[spanish]{babel}
