--- a/quinta_entrega/refs.bib
+++ b/quinta_entrega/refs.bib
@@ -300,7 +300,7 @@
   url = {https://doi.org/10.1145/1558897.1558900},
   doi = {10.1145/1558897.1558900},
   journal = {XRDS},
-  month = {jun},
+  month = jun,
   articleno = {3},
   numpages = {4},
 }
