--- a/quinta_entrega/document.tex
+++ b/quinta_entrega/document.tex
@@ -16,7 +16,7 @@
 \hypersetup{
   pdftitle={Modificación de una simulación sísmica numérica para que haga uso de bibliotecas de análisis y visualización in-situ},
   pdfauthor={Christian Asch},
-  colorlinks=true,
+  colorlinks=false,
   breaklinks=true,
 }
 \usepackage[nameinlink, noabbrev, spanish]{cleveref}
