--- a/quinta_entrega/refs.bib
+++ b/quinta_entrega/refs.bib
@@ -487,3 +487,20 @@ series = {AFIPS '67 (Spring)}
   month = may,
   pages = {532–533}
 }
+@BOOK{Pacheco2011-sb,
+  title     = "An introduction to parallel programming",
+  author    = "Pacheco, Peter",
+  publisher = "Morgan Kaufmann",
+  month     =  feb,
+  year      =  2011
+}
+@BOOK{Mattson2019-vv,
+  title     = "The {OpenMP} common core",
+  author    = "Mattson, Timothy G and He, Yun and Koniges, Alice E",
+  publisher = "MIT Press",
+  series    = "Scientific and Engineering Computation",
+  month     =  nov,
+  year      =  2019,
+  address   = "London, England",
+  language  = "en"
+}
