--- a/quinta_entrega/framework.tex
+++ b/quinta_entrega/framework.tex
@@ -1,7 +1,6 @@
 \section{Computación de alto rendimiento}
 La computación de alto rendimiento, o HPC por sus siglas en inglés, hace uso de conocimientos de distintas áreas de la ciencia y la computación para hacer uso de computadoras y clústers de computadoras de forma eficiente. Se ha dicho que informalmente el HPC es un área científica y técnica que estudia las supercomputadoras \cite{Nielsen2016}. Este trabajo es parte busca aplicar el HPC a un problema científico por lo que es necesario tener claro algunos conceptos.
-\subsection{Conceptos básicos}
-\subsubsection{Rendimiento}
+\subsection{Rendimiento}
 Definimos rendimiento (o performance en inglés) como el recíproco del tiempo de ejecución de un programa \cite{Hennessy2017-ml}. Esto se puede expresar matemáticamente en la ecuación \ref{eq:performance}.
 \begin{equation}
 p_{a} = \frac{1}{t_a}
@@ -14,14 +13,14 @@ Cuando comparamos dos implementaciones de un programa podemos hacerlo con sus re
   \label{eq:comparison}
 \end{equation}
 
-\subsubsection{Speedup}
+\subsection{Speedup}
 El speedup es la razón entre el rendimiento de un programa que ha sido mejorado y el mismo programa antes de la mejoría \cite{Hennessy2017-ml}. Esta mejoría puede ser un cambio en el programa en sí, o en los recursos computacionales que tiene disponibles.
 En HPC nos interesa medir el speedup de un programa a distintas cantidades de nodos en una supercomputadora específica. El speedup $s$ de un programa utilizando $n$ nodos de computación está dado por la ecuación \ref{eq:speedup}
 \begin{equation}
   s_n = \frac{t_1}{t_n} = \frac{p_n}{p_1}
   \label{eq:speedup}
 \end{equation}
-\subsubsection{Ley de Amdahl}
+\subsection{Ley de Amdahl}
 La ley de Amdahl se refiere a la observación hecha por Gene Amdahl de que todos los programas están conformados por una fracción que se ejecuta de forma serial ($r_s$) y otra que se puede ejecutar de forma paralela ($r_p$) \cite{amdahl1967}. A esta fracción serial le llamamos overhead. El tiempo de un programa que se ejecuta con un sólo procesador sería entonces:
 $$t_1 = t_s + t_p = 1$$
 Donde $t_p$ se refiere al tiempo que le programa dura en la fracción que se puede paralelizar, $t_s$ el tiempo que dura en la fracción serial y lo definimos como 1 para facilitar los cálculos posteriores.
@@ -35,25 +34,25 @@ s_N = \frac{1}{t_s + \frac{t_p}{N}}
 La ecuación \ref{eq:amdahl} es lo que conocemos como la ley de Amdahl. Tomando el límite de esta ecuación observamos lo siguiente:
 $$\lim_{N\to\infty} \frac{1}{t_s + \frac{t_p}{N}} = \frac{1}{t_s}$$
 El speedup está acotado por el overhead del programa.
-\subsubsection{Ley de Gustafson-Barsis}
+\subsection{Ley de Gustafson-Barsis}
 Gustafson y Barsis observaron que la ley de Amdahl tiene una suposición implícita, el tamaño del problema de entrada del programa se mantiene fijo con respecto a la cantidad de recursos computacionales disponibles \cite{Gustafson1988}. De acuerdo a su experiencia trabajando en el Laboratorio Nacional Sandia en los Estados Unidos esto no es una suposición realista, el tamaño de los problemas que los investigadores resuelven está relacionado con la cantidad de recursos que tienen disponibles. Adicionalmente los autores notaron que el overhead del programa era aproximadamente independiente del tamaño del problema. Los autores entonces proponen que el tiempo de ejecución de un programa paralelo con $N$ nodos está dado por:
 $$t_N = t_s + t_{p_n} = 1$$
 Aquí de nuevo $t_s$ es el tiempo que el programa invierte en la fracción secuencial, pero $t_{p_n}$ se refiere al tiempo que el programa pasa en la fracción paralela del programa con una carga de trabajo distribuida. Definimos la ecuación como 1 para facilitar los cálculos.
 De aquí tenemos que el tiempo de ejecución del mismo programa con la misma carga de trabajo de forma serial sería:
 $$t_1 = t_s + t_{p_n}\times N$$
-Por lo que el speedup sería:
+Por lo que el speedup es:
 \begin{equation}
   s = \frac{t_1}{t_N} = t_s + t_{p_n}\times N
   \label{eq:gustafson}
 \end{equation}
 
 La ecuación \ref{eq:gustafson} se conoce como la ley de Gustafson-Barsis. Es importante recalcar que la ley de Amdahl y la ley de Gustafson-Barsis miden el speedup de dos situaciones distintas, por una parte la ley de Amdahl supone que el programa tiene una carga de trabajo constante y simplemente se le están dando más recursos de ejecución, mientras que la ley de Gustafson-Baris supone que la carga de trabajo crece con la cantidad de recursos disponibles.
-\subsubsection{Escalabilidad}
-La escalabilidad se refiere a la capacidad de los programas de 
+\subsection{Escalabilidad}
+La escalabilidad se refiere a la forma en que cambia la eficiencia de un programa al cambiar el tamaño del problema o los recursos computacionales disponibles \cite{Pacheco2011-sb}.
 \subsubsection{Escalamiento fuerte}
-El escalamiento fuerte se refiere a la 
+El escalamiento fuerte se refiere al escalamiento de un programa cuando el tamaño del problema se mantiene constante pero se cambia la cantidad de recursos computacionales \cite{Pacheco2011-sb}. La ley de Amdahl (\ref{eq:amdahl}) nos dice que mantener el escalamiento fuerte es difícil de mantener \cite{Mattson2019-vv}.
 \subsubsection{Escalamiento débil}
-B
+El escalamiento débil es el estudio del escalamiento de un programa cuando se hace que el tamaño del problema cambie de forma proporcional a la cantidad de recursos computacionales \cite{Pacheco2011-sb}. Si el overhead de manejar los recursos paralelos se mantiene relativamente constante, la ley de Gustafson-Barsis (\ref{eq:gustafson}) predice que el tiempo de ejecución será constante, por lo que este tipo de escalamiento sirve para determinar el overhead de los programas \cite{Mattson2019-vv}.
 \section{Simulaciones sísmicas}
 % Ecuaciones de onda
 % Ondas P
