--- a/quinta_entrega/refs.bib
+++ b/quinta_entrega/refs.bib
@@ -504,3 +504,11 @@ series = {AFIPS '67 (Spring)}
   address   = "London, England",
   language  = "en"
 }
+@article{Yu2006,
+author = "Hongfeng  Yu and Tiankai  Tu and Jacobo Bielak and Omar  Ghattas and Julio  Lopez and Kwan-Liu  Ma and David R. O'Hallaron and Leonardo  Ramirez-Guzman and Nathan  Stone and Ricardo  Taborda-Rios and John  Urbanic",
+title = "{Remote Runtime Steering of Integrated Terascale Simulation and Visualization}",
+year = "2006",
+month = "1",
+url = "https://kilthub.cmu.edu/articles/journal_contribution/Remote_Runtime_Steering_of_Integrated_Terascale_Simulation_and_Visualization/6608987",
+doi = "10.1184/R1/6608987.v1"
+}
